package com.example.common.uicomponent;

import android.app.Application;

public class HiBaseApplication extends Application {
    @Override
    public void onCreate() {
        super.onCreate();
    }
}
