package com.example.common.uicomponent;

public interface HiBaseActionInterface {
}
