@startuml

title __ASPROJ.COMMON's Class Diagram__\n

  namespace com.example.common {
    class com.example.common.BuildConfig {
    }
  }
  

  namespace com.example.common {
    namespace tab {
      class com.example.common.tab.HiFragmentTabView {
      }
    }
  }
  

  namespace com.example.common {
    namespace tab {
      class com.example.common.tab.HiTabViewAdapter {
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      interface com.example.common.uicomponent.HiBaseActionInterface {
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      class com.example.common.uicomponent.HiBaseActivity {
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      class com.example.common.uicomponent.HiBaseApplication {
      }
    }
  }
  

  namespace com.example.common {
    namespace uicomponent {
      abstract class com.example.common.uicomponent.HiBaseFragment {
      }
    }
  }
  

  com.example.common.tab.HiFragmentTabView -up-|> android.widget.FrameLayout
  com.example.common.tab.HiFragmentTabView o-- com.example.common.tab.HiTabViewAdapter : mAdapter
  com.example.common.uicomponent.HiBaseActivity .up.|> com.example.common.uicomponent.HiBaseActionInterface
  com.example.common.uicomponent.HiBaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.common.uicomponent.HiBaseApplication -up-|> android.app.Application
  com.example.common.uicomponent.HiBaseFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
